deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: td27
  labels:
    app.kubernetes.io/part-of: td27
